# CMakePractice

./: README.md
p1-hello/: CMakeLists.txt
p2-helloworld/: CMakeLists.txt  COPYRIGHT
p2-helloworld/doc/: hello_copy.txt
p3-library/lib/: CMakeLists.txt
p4-use-library/src/: CMakeLists.txt
p6-find-module/src/: main.c
p7-find-my-module/cmake/: FindHELLO.cmake
