PROJECT(HELLO) 
#添加子目录 并在该目录下自动寻找CMakeLists.txt 运行
ADD_SUBDIRECTORY(src bin)
#EXECUTABLE_OUTPUT_PATH 常量变量 输出可执行路径
#PROJECT_BINARY_DIR 常量变量
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

#LIBRARY_OUTPUT_PATH 动态库输出路径
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

MESSAGE(STATUS EXECUTABLE_OUTPUT_PATH ${EXECUTABLE_OUTPUT_PATH})
MESSAGE(STATUS LIBRARY_OUTPUT_PATH ${LIBRARY_OUTPUT_PATH})

# 安装可执行文件命令
INSTALL(TARGETS hello
    RUNTIME DESTINATION bin
    )
# 安装COPYRIGHT/README
INSTALL(FILES COPYRIGHT README DESTINATION doc)
# 安装runhello.sh
INSTALL(PROGRAMS runhello.sh DESTINATION bin)
# 安装doc文件夹
INSTALL(DIRECTORY doc/ DESTINATION doc/doc)